final-bimaru-client/bnf.txt
<Document> ::= <DMap> | <DList> | <DInteger> | <DString> | <DNull>

<DInteger> ::= <Int>
<Int> ::= <Sign> <NumFront>
<Sign> ::= '-' | ''
<NumFront> ::= <NZUnsignedInt> <Num> | <UnsignedInt>
<Num> ::= <UnsignedInt> <Num> | <UnsignedInt>
<UnsignedInt> = 0|1|2|3|4|5|6|7|8|9
<NZUnsignedInt> = 1|2|3|4|5|6|7|8|9

<DString> ::= <String>
<String> ::= <Char> | <Char> <String>
<Char> ::= a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z
	  |A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z
	  |:|\n| |0|1|2|3|4|5|6|7|8|9

<DNull> ::= null '\n'

<DMap> ::= <DMapItem> <DMap> | <DMapItem>
<DMapItem> ::= <Key>: <Value>
<Key> ::= <KeyChar> <Key> | <KeyChar>
<Key> ::= a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z
	 |A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z
<Value> ::= ('\n' <DMap>) | ('\n' <DList>) | <DInteger> | <DString> | <DNull>

<DList> ::= <DListItem> <DList> | <DListItem>
<DListItem> ::= <Spacing>- <Document>
<Spacing> ::= ' ' <Spacing> | ' ' | ''

<Yaml> ::= <Document>

